# Trellis-MCP-server

./: README.md  pyproject.toml  setup_guide.md
tests/: test_trellis_client.py
trellis_mcp/: __main__.py  server.py  trellis_client.py
trellis_mcp/tools/: __init__.py
